# litbase

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Utils.cmake
cmake/: FindFFmpeg.cmake  FindTaglib.cmake
litaudio/: CMakeLists.txt
litaudio/structures/: audio_buffer_deinterleaved.h  audio_buffer_interface.h  audio_buffer_interface_deinterleaved.h  audio_container.h  (+5 more)
litaudiofile/: CMakeLists.txt
litcore/: CMakeLists.txt  core_defines.h
litsignal/: CMakeLists.txt  litsignal_constants.h  test.cpp  test.h
litsignal/algorithm_structure/: algorithm_interface.h  algorithm_simple_runner.h  frame_factory_mat.h  frame_factory_vec.h  node_fft.h  node_ifft.h  node_window_vec.h  output_builder_col_mat.h  output_builder_mat.h  output_builder_row_mat.h  output_builder_vec.h
litsignal/algorithm_structure/frame_factories/: frame_factory_mat.h  frame_factory_vec.h  frame_factory_vec_ptr.h
litsignal/algorithm_structure/nodes/: node_fft.h  node_ifft.h  node_window_vec.h
litsignal/algorithm_structure/output_builders/: output_builder_col_mat.h  output_builder_row_mat.h  output_builder_vec.h
litsignal/algorithm_structure/runners/: algorithm_parallel_runner.h  algorithm_simple_runner.h
litsignal/analysis/: fourier_analysis.cpp  fourier_analysis.h  fourier_coefficients_algorithm.cpp  fourier_coefficients_algorithm.h  istft_algorithm.h  istft_pipeline.cpp  istft_pipeline.h  stft_algorithm.h  stft_pipeline.cpp  stft_pipeline.h  stft_processor.h
litsignal/processing/: phase_vocoder_algorithm.h  phase_vocoder_pipeline.cpp  phase_vocoder_pipeline.h  resample.cpp  resample.h  resample_internal.cpp  resample_internal.h  stft_processing.cpp  stft_processing.h
litsignal/processing_helpers/: fft_processor.h  frame_processor.h  frame_processor_interface.h  window_processor.h
litsignal/structures/: signal_container.cpp  signal_container.h
litsignal/utils/: frame_utils.h  litsignal_math.cpp  litsignal_math.h  mat_utils.cpp  mat_utils.h  pulse_utils.cpp  pulse_utils.h  window_utils.h
test/: CMakeLists.txt
test/test_litaudiofile/: CMakeLists.txt  base_tests.cpp
test/test_litsignal/: CMakeLists.txt  analysis_tests.cpp  base_tests.cpp  test_helpers.h
(+23 files in other folders)
